Added basic styles and app bar prototype

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 	--font-display: 'Quicksand', sans-serif;
 
 	--color-cloud-drift: #fafafa;
-	--color-misty-aqua: #c0d3d6;
+	--color-icy-wisp: #e7edf1;
 	--color-soft-charcoal: #5e5e5e;
 	--color-dusk-teal: #84a9b1;
 
