--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 
 @theme {
 	--default-font-family: 'Nunito';
-	--font-display: 'Quicksand', sans-serif;
+	--font-display: 'Pacifico', sans-serif;
 
 	--color-cloud-drift: #fafafa;
 	--color-icy-wisp: #e7edf1;
