--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,9 @@
 @import 'tailwindcss';
 
+@import '@fontsource-variable/nunito/wght.css';
+
 @theme {
-	--default-font-family: 'Nunito';
-	--font-display: 'Pacifico', sans-serif;
+	--default-font-family: 'Nunito Variable', var(--font-sans);
 
 	--color-cloud-drift: #fafafa;
 	--color-icy-wisp: #e7edf1;
