feat!: completely revamped the main page
Completely switched the style of the website.

BREAKING CHANGE: Website has been completely changed.

--- a/src/app.css
+++ b/src/app.css
@@ -1,21 +1,1 @@
-@import 'tailwindcss';
-
-@import '@fontsource-variable/nunito/wght.css';
-
-@theme {
-	--default-font-family: 'Nunito Variable', var(--font-sans);
-
-	--color-cloud-drift: #fafafa;
-	--color-icy-wisp: #e7edf1;
-	--color-soft-charcoal: #5e5e5e;
-	--color-dusk-teal: #84a9b1;
-
-	--color-midnight-slate: #1e252d;
-	--color-deep-ocean: #35424d;
-	--color-pale-moon: #c7d2da;
-	--color-smoky-blue: #8ca4b7;
-
-	--color-golden-zing: #ffc72c;
-
-	--spacing-safe-top: env(safe-area-inset-top, 0px);
-}
+/* Empty stylesheet. */
